fix quote alignment

--- a/style.css
+++ b/style.css
@@ -147,5 +147,5 @@ img{
 }
 
 .container_quote{
-    max-width: 870px;
+    max-width: 830px;
 }
